--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,4 +59,12 @@
         android:text="获取微信语音聊天缓冲" />
 
 
+
+    <Button
+        android:id="@+id/buttonProd"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+
+
 </LinearLayout>
